# Asayn

./: .gitignore  README.md  README.zh-CN.md  build_release.sh  defaults.go  go.mod  go.sum  install.bat  install.ps1  install.sh
.github/workflows/: release.yml
cmd/asayn/: main.go
cmd/asayn-bridge/: main.go
default_Asayn/: api_config.toml
default_Asayn/mcp/: codegraph.json
default_Asayn/root_agents/: default.toml
default_Asayn/special_agents/: compact_agent.toml  default.toml
default_Asayn/sub_agents/: default.toml
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/electron/: main.cjs  preload.cjs
desktop/scripts/: build-electron-sidecar.mjs  build-sidecar.sh
desktop/src/: App.tsx  Markdown.tsx  bridge.ts  main.tsx  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
internal/app/: app.go
internal/config/: config.go  config_test.go
internal/llm/: agent.go  agent_test.go  client.go
internal/llm/types/: types.go
internal/llm/usage/: usage.go
internal/migration/: claude.go  claude_test.go
internal/session/: session.go  session_test.go
internal/tools/: executor.go  executor_fileops.go  executor_fileops_test.go  executor_schema_test.go  executor_test.go  file_diff.go  mcp.go  shell.go  shell_unix.go  shell_windows.go  sub_agent.go
internal/tui/: chat_input.go  clipboard_unix.go  clipboard_windows.go  tui.go  tui_test.go
internal/workspaceindex/: index.go  index_test.go
