[package]
name = "asayn-desktop"
version = "0.5.12"
description = "Asayn desktop client"
authors = ["Asayn contributors"]
edition = "2021"

[lib]
name = "asayn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
